--- a/app/src/main/res/layout/activity_ui_view_pager_with_recycler_view.xml
+++ b/app/src/main/res/layout/activity_ui_view_pager_with_recycler_view.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <com.hoony.kotlinsample.ui_example.view_pager_with_recycler_view.layout.OrientationConstraintLayout
         android:id="@+id/clContainer"
@@ -29,56 +32,4 @@
 
     </com.hoony.kotlinsample.ui_example.view_pager_with_recycler_view.layout.OrientationConstraintLayout>
 
-
-    <!--    <androidx.core.widget.NestedScrollView-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent">-->
-
-    <!--        <LinearLayout-->
-    <!--            android:descendantFocusability="blocksDescendants"-->
-    <!--            android:id="@+id/llContainer"-->
-    <!--            android:layout_width="match_parent"-->
-    <!--            android:layout_height="wrap_content"-->
-    <!--            android:orientation="vertical">-->
-
-    <!--            <androidx.viewpager2.widget.ViewPager2-->
-    <!--                android:id="@+id/vpMain"-->
-    <!--                android:layout_width="match_parent"-->
-    <!--                android:layout_height="540dp" />-->
-
-    <!--            <androidx.recyclerview.widget.RecyclerView-->
-    <!--                android:id="@+id/rvList"-->
-    <!--                android:layout_width="match_parent"-->
-    <!--                android:layout_height="700dp"-->
-    <!--                android:layout_marginTop="-160dp" />-->
-
-    <!--        </LinearLayout>-->
-
-
-    <!--        &lt;!&ndash;        <androidx.constraintlayout.widget.ConstraintLayout&ndash;&gt;-->
-    <!--        &lt;!&ndash;            android:id="@+id/clContainer"&ndash;&gt;-->
-    <!--        &lt;!&ndash;            android:layout_width="match_parent"&ndash;&gt;-->
-    <!--        &lt;!&ndash;            android:layout_height="540dp"&ndash;&gt;-->
-    <!--        &lt;!&ndash;            android:orientation="vertical">&ndash;&gt;-->
-
-    <!--        &lt;!&ndash;            <androidx.viewpager2.widget.ViewPager2&ndash;&gt;-->
-    <!--        &lt;!&ndash;                android:id="@+id/vpMain"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                android:layout_width="match_parent"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                android:layout_height="540dp"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                app:layout_constraintStart_toStartOf="parent"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                app:layout_constraintTop_toTopOf="parent" />&ndash;&gt;-->
-
-    <!--        &lt;!&ndash;            <androidx.recyclerview.widget.RecyclerView&ndash;&gt;-->
-    <!--        &lt;!&ndash;                android:id="@+id/rvList"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                android:layout_width="0dp"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                android:layout_height="wrap_content"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                android:clipToPadding="false"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                app:layout_constraintBottom_toBottomOf="parent"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                app:layout_constraintEnd_toEndOf="parent"&ndash;&gt;-->
-    <!--        &lt;!&ndash;                app:layout_constraintStart_toStartOf="parent" />&ndash;&gt;-->
-
-    <!--        &lt;!&ndash;        </androidx.constraintlayout.widget.ConstraintLayout>&ndash;&gt;-->
-
-    <!--    </androidx.core.widget.NestedScrollView>-->
-</layout>
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
