--- a/app/src/main/res/layout/activity_ui_example_2.xml
+++ b/app/src/main/res/layout/activity_ui_example_2.xml
@@ -9,7 +9,7 @@
         android:id="@+id/rvList"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:clipToPadding="false"
+        android:clipChildren="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
