--- a/app/src/main/res/layout/item_single_text_full_size.xml
+++ b/app/src/main/res/layout/item_single_text_full_size.xml
@@ -9,7 +9,7 @@
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="400dp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
