--- a/app/src/main/res/layout/fragment_big_picture.xml
+++ b/app/src/main/res/layout/fragment_big_picture.xml
@@ -4,22 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/bigTextContainer"
+        android:id="@+id/bigPictureContainer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:ignore="HardcodedText">
 
-        <EditText
-            android:id="@+id/bigText"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:hint="Big text"
-            android:importantForAutofill="no"
-            android:inputType="text"
-            app:layout_constraintBottom_toBottomOf="parent"
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <EditText
+            android:id="@+id/urlEdit"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
