--- a/app/src/main/res/layout/fragment_big_picture.xml
+++ b/app/src/main/res/layout/fragment_big_picture.xml
@@ -13,17 +13,23 @@
             android:id="@+id/image"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@+id/urlEdit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
         <EditText
             android:id="@+id/urlEdit"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:hint="Image url"
+            android:importantForAutofill="no"
+            android:inputType="textUri"
+            android:text="https://picsum.photos/id/237/200/300"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/image" />
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
