--- a/app/src/main/res/layout/fragment_big_text.xml
+++ b/app/src/main/res/layout/fragment_big_text.xml
@@ -15,7 +15,7 @@
             android:layout_height="0dp"
             android:hint="Big text"
             android:importantForAutofill="no"
-            android:inputType="text"
+            android:inputType="textMultiLine"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
