--- a/app/src/main/res/layout/activity_kokoa_message.xml
+++ b/app/src/main/res/layout/activity_kokoa_message.xml
@@ -46,8 +46,23 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Text" />
-
     </RadioGroup>
 
+    <FrameLayout
+        android:id="@+id/fragment"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/messageKind" />
+
+    <Button
+        android:id="@+id/sendButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Send"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/fragment" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
